--- a/src/App.css
+++ b/src/App.css
@@ -583,7 +583,7 @@
 }
 
 .modal {
-  display: none;
+  display: flex;
   position: fixed;
   inset: 0;
   background: rgba(0, 0, 0, 0.55);
@@ -839,6 +839,14 @@
   font-size: 13px;
   color: #6a00d8;
   text-decoration: none;
+}
+.sarlavha{
+  border-radius: 15px;
+  padding-right: 5px;
+  transition: all .2s linear;
+}
+.sarlavha:hover{
+  background-color: #dee0e5;
 }
 
 /* Fade animatsiya */
